--- a/repos-config.json
+++ b/repos-config.json
@@ -4,22 +4,18 @@
     "branches": ["main"],
     "shared_lib_path": "vars/",
     "jenkins_path": "Jenkinsfile-example",
-    "type": "jenkins",
-    "description": "Tu propia librería Jenkins"
+    "type": "jenkins"
   },
   {
     "repo": "boozallen/sdp-libraries",
     "branch": "main",
     "shared_lib_path": "vars/",
-    "type": "jenkins",
-    "description": "Librería pública grande y activa (Booz Allen) con muchas funciones Groovy"
+    "type": "jenkins"
   },
   {
     "repo": "ricardops2211/richie-azure-devops-templates",
     "branch": "main",
     "shared_lib_path": "templates/",
-    "jenkins_path": "azure-pipelines.yml",
-    "type": "azure",
-    "description": "Tu propio repo de templates Azure DevOps"
+    "type": "azure"
   }
 ]
