--- a/.github/workflows/migrate-to-gha.yml
+++ b/.github/workflows/migrate-to-gha.yml
@@ -1,156 +1,30 @@
-name: Migración Automatizada a GitHub Actions (con IA)
+name: AI Multi-Repo Migration
 
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
 
-permissions:
-  contents: read
-
 jobs:
-  generate-matrix:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.build.outputs.matrix }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Validar JSON y construir matrix
-        id: build
-        run: |
-          if ! jq empty repos-config.json; then
-            echo "JSON inválido"
-            echo "matrix=[]" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-
-          RAW=$(jq -c '
-            .[] as $repo
-            | ($repo.branches // [$repo.branch // ""]) as $branches
-            | $branches[]
-            | {
-                repo: $repo.repo,
-                branch: .,
-                shared_lib_path: ($repo.shared_lib_path // ""),
-                jenkins_path: ($repo.jenkins_path // ""),
-                type: ($repo.type // "jenkins")
-              }
-          ' repos-config.json)
-
-          MATRIX=$(echo "$RAW" | jq -s -c '.')
-          echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
-          echo "$MATRIX" | jq .
-
   migrate:
-    needs: generate-matrix
     runs-on: ubuntu-latest
-    if: ${{ needs.generate-matrix.outputs.matrix != '[]' }}
-    strategy:
-      fail-fast: false
-      max-parallel: 3
-      matrix:
-        config: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Migrator Repo
+        uses: actions/checkout@v4
 
-      # ─────────────────────────────────────────────
-      # CLONAR REPO (auto-detect branch si no existe)
-      # ─────────────────────────────────────────────
-      - name: Clonar repo objetivo
-        run: |
-          REPO="${{ matrix.config.repo }}"
-          REQUESTED_BRANCH="${{ matrix.config.branch }}"
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
 
-          if [ -n "$REQUESTED_BRANCH" ] && \
-             git ls-remote --heads https://github.com/$REPO $REQUESTED_BRANCH | grep -q $REQUESTED_BRANCH; then
-            BRANCH=$REQUESTED_BRANCH
-          else
-            BRANCH=$(git ls-remote --symref https://github.com/$REPO HEAD \
-              | awk '/^ref:/ {sub(/refs\/heads\//,"",$2); print $2}')
-          fi
+      - name: Make script executable
+        run: chmod +x scripts/migrate-with-ai.sh
 
-          echo "Usando rama: $BRANCH"
-          git clone --depth 1 --branch $BRANCH \
-            https://github.com/$REPO target-repo
-
-          echo "REAL_BRANCH=$BRANCH" >> $GITHUB_ENV
-
-      # ─────────────────────────────────────────────
-      # DETECTAR ARCHIVOS SEGÚN ESTRUCTURA REAL
-      # ─────────────────────────────────────────────
-      - name: Detectar archivos a migrar
-        id: detect
-        run: |
-          cd target-repo
-
-          TYPE="${{ matrix.config.type }}"
-          SHARED="${{ matrix.config.shared_lib_path }}"
-          JENKINS="${{ matrix.config.jenkins_path }}"
-
-          FILES=""
-
-          if [ "$TYPE" = "jenkins" ]; then
-
-            if [ -d "$SHARED" ]; then
-              FILES="$FILES $(find $SHARED -type f -name '*.groovy')"
-            fi
-
-            if [ -d "src" ]; then
-              FILES="$FILES $(find src -type f -name '*.groovy')"
-            fi
-
-            if [ -f "$JENKINS" ]; then
-              FILES="$FILES $JENKINS"
-            fi
-
-          elif [ "$TYPE" = "azure" ]; then
-
-            if [ -d "$SHARED" ]; then
-              FILES="$FILES $(find $SHARED -type f -name '*.yml')"
-            fi
-
-            if [ -f "azure-pipelines.yml" ]; then
-              FILES="$FILES azure-pipelines.yml"
-            fi
-
-            if [ -f "azure-pipelines-example.yml" ]; then
-              FILES="$FILES azure-pipelines-example.yml"
-            fi
-          fi
-
-          FILES=$(echo "$FILES" | tr '\n' ' ' | xargs)
-
-          if [ -z "$FILES" ]; then
-            echo "files=" >> $GITHUB_OUTPUT
-            echo "No se encontraron archivos."
-          else
-            echo "Archivos detectados:"
-            echo "$FILES"
-            echo "files=$FILES" >> $GITHUB_OUTPUT
-          fi
-
-      # ─────────────────────────────────────────────
-      # EJECUTAR MIGRACIÓN IA
-      # ─────────────────────────────────────────────
-      - name: Ejecutar migración con IA
-        if: ${{ steps.detect.outputs.files != '' }}
+      - name: Run Migration
+        run: ./scripts/migrate-with-ai.sh
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_MODEL: gpt-4o
-          REPO_NAME: ${{ matrix.config.repo }}
-          BRANCH_NAME: ${{ env.REAL_BRANCH }}
-          FILES_TO_MIGRATE: ${{ steps.detect.outputs.files }}
-          TYPE: ${{ matrix.config.type }}
-        run: |
-          chmod +x scripts/migrate-with-ai.sh
-          ./scripts/migrate-with-ai.sh
+          OPENAI_MODEL: gpt-4.1
 
-      - name: Subir resultados
-        if: always()
+      - name: Upload Results
         uses: actions/upload-artifact@v4
         with:
-          name: migrated-${{ matrix.config.repo }}
+          name: migrated-results
           path: migrated/
