--- a/repos-config.json
+++ b/repos-config.json
@@ -1,14 +1,14 @@
 [
   {
     "repo": "ricardops2211/richie-jenkins-shared-lib",
-    "branch": "master",
+    "branches": ["master"],
     "shared_lib_path": "vars/",
     "jenkins_path": "Jenkinsfile-example",
     "type": "jenkins"
   },
   {
     "repo": "boozallen/sdp-libraries",
-    "branch": "master",
+    "branch": "main",
     "shared_lib_path": "vars/",
     "type": "jenkins"
   },
@@ -16,7 +16,6 @@
     "repo": "ricardops2211/richie-azure-devops-templates",
     "branch": "master",
     "shared_lib_path": "templates/",
-    "jenkins_path": "azure-pipelines.yml",
     "type": "azure"
   }
 ]
