--- a/.github/workflows/migrate-to-gha.yml
+++ b/.github/workflows/migrate-to-gha.yml
@@ -11,8 +11,10 @@ permissions:
   contents: read
 
 jobs:
-  migrate-all:
+  generate-matrix:
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.build.outputs.matrix || '[]' }}
     steps:
       - uses: actions/checkout@v4
 
@@ -22,20 +24,73 @@ jobs:
             echo "JSON encontrado"
             cat repos-config.json
           else
-            echo "ERROR: repos-config.json no existe"
+            echo "ERROR: No existe repos-config.json"
             exit 1
           fi
 
-      - name: Ejecutar migración con Groq
+      - name: Generar matrix
+        id: build
+        run: |
+          MATRIX=$(jq -r '
+            .[] 
+            | (.branches // [.branch // "master"]) as $b
+            | $b[]
+            | {
+                repo: .repo,
+                branch: .,
+                shared_lib_path: (.shared_lib_path // "vars/"),
+                jenkins_path: (.jenkins_path // "Jenkinsfile"),
+                type: (.type // "jenkins")
+              }
+            | @json
+          ' repos-config.json | jq -s -c 'map(.)' || echo "[]")
+          echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
+
+  migrate:
+    needs: generate-matrix
+    runs-on: ubuntu-latest
+    if: ${{ fromJson(needs.generate-matrix.outputs.matrix) != '[]' }}
+    strategy:
+      fail-fast: false
+      max-parallel: 5
+      matrix:
+        config: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
+    steps:
+      - name: Checkout origen
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ matrix.config.repo }}
+          ref: ${{ matrix.config.branch }}
+          path: source-repo
+          token: ${{ secrets.GH_PAT }}
+
+      - name: Buscar archivos
+        id: find-files
+        run: |
+          cd source-repo
+          FILES=$(find . -type f \
+            \( -name "*.groovy" -o -name "Jenkinsfile*" -o -name "*.yml" -o -name "*.yaml" \) \
+            -path "*${{ matrix.config.shared_lib_path }}*" -o -path "*${{ matrix.config.jenkins_path }}*" \
+            | tr '\n' ' ')
+          echo "files=$FILES" >> $GITHUB_OUTPUT
+
+      - name: Transformar con Groq
+        if: steps.find-files.outputs.files != ''
         env:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-          GROQ_MODEL: llama-3.1-70b-versatile
-        run: ./scripts/migrate-with-ai.sh
+          GROQ_MODEL: deepseek-coder-v2-lite
+          REPO_NAME: ${{ matrix.config.repo }}
+          BRANCH_NAME: ${{ matrix.config.branch }}
+          FILES_TO_MIGRATE: ${{ steps.find-files.outputs.files }}
+          TYPE: ${{ matrix.config.type }}
+        run: |
+          chmod +x ./scripts/migrate-with-ai.sh
+          ./scripts/migrate-with-ai.sh
 
-      - name: Subir resultados como Artifacts
+      - name: Subir Artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: migrated-files
+          name: migrated-${{ matrix.config.repo }}-${{ matrix.config.branch }}
           path: migrated/**
           retention-days: 7
