--- a/.github/workflows/migrate-to-gha.yml
+++ b/.github/workflows/migrate-to-gha.yml
@@ -110,7 +110,7 @@ jobs:
         working-directory: migration-repo
         env:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-          GROQ_MODEL: lllama-3.3-70b-versatile
+          GROQ_MODEL: llama-3.1-8b-instant
           REPO_NAME: ${{ matrix.config.repo }}
           BRANCH_NAME: ${{ matrix.config.branch }}
           FILES_TO_MIGRATE: ${{ steps.find-files.outputs.files }}
